force-app/main/default/objects/Property__c/fields/areabuilding__c.field-meta.xml
<CustomField>
    <fullName>areabuilding__c</fullName>
    <label>Building Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>