force-app/main/default/objects/Property__c/fields/areagross__c.field-meta.xml
<CustomField>
    <fullName>areagross__c</fullName>
    <label>Gross Area of All Structures</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>