force-app/main/default/objects/Property__c/fields/arealotsf__c.field-meta.xml
<CustomField>
    <fullName>arealotsf__c</fullName>
    <label>Lot Area (Square Footage)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>