force-app/main/default/objects/Property__c/fields/attom_Id__c.field-meta.xml
<CustomField>
    <fullName>attom_Id__c</fullName>
    <label>attom Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>