force-app/main/default/objects/Property__c/fields/availableequity__c.field-meta.xml
<CustomField>
    <fullName>availableequity__c</fullName>
    <label>Available Equity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>