force-app/main/default/objects/Property__c/fields/bathcount__c.field-meta.xml
<CustomField>
    <fullName>bathcount__c</fullName>
    <label>Bathrooms Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>