force-app/main/default/objects/Property__c/fields/bedroomscount__c.field-meta.xml
<CustomField>
    <fullName>bedroomscount__c</fullName>
    <label>Bedrooms Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>