force-app/main/default/objects/Property__c/fields/buildingscount__c.field-meta.xml
<CustomField>
    <fullName>buildingscount__c</fullName>
    <label>Buildings Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>