force-app/main/default/objects/Property__c/fields/construction__c.field-meta.xml
<CustomField>
    <fullName>construction__c</fullName>
    <label>Construction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>