force-app/main/default/objects/Property__c/fields/contactownermailaddresscity__c.field-meta.xml
<CustomField>
    <fullName>contactownermailaddresscity__c</fullName>
    <label>Owner Mailing Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>