force-app/main/default/objects/Property__c/fields/contactownermailaddressfull__c.field-meta.xml
<CustomField>
    <fullName>contactownermailaddressfull__c</fullName>
    <label>Owner Mailing Address Full</label>
    <length>255</length>
    <type>Text</type>
</CustomField>