force-app/main/default/objects/Property__c/fields/current2ndpositionopenloaninterestrate__c.field-meta.xml
<CustomField>
    <fullName>current2ndpositionopenloaninterestrate__c</fullName>
    <label>Second Position Open Loan Interest Rate</label>
    <precision>18</precision>
    <scale>14</scale>
    <type>Percent</type>
</CustomField>