force-app/main/default/objects/Property__c/fields/currentfirstpositionmortgagetype__c.field-meta.xml
<CustomField>
    <fullName>currentfirstpositionmortgagetype__c</fullName>
    <label>First Position Mortgage Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>