force-app/main/default/objects/Property__c/fields/currentfirstpositionopenloaninterestrate__c.field-meta.xml
<CustomField>
    <fullName>currentfirstpositionopenloaninterestrate__c</fullName>
    <label>First Position Open Loan Interest Rate</label>
    <precision>18</precision>
    <scale>14</scale>
    <type>Percent</type>
</CustomField>