force-app/main/default/objects/Property__c/fields/currentsecondpositionmortgagetype__c.field-meta.xml
<CustomField>
    <fullName>currentsecondpositionmortgagetype__c</fullName>
    <label>Second Position Mortgage Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>