force-app/main/default/objects/Property__c/fields/deedlastsaledate__c.field-meta.xml
<CustomField>
    <fullName>deedlastsaledate__c</fullName>
    <label>Deed Last Sale Date</label>
    <type>DateTime</type>
</CustomField>