force-app/main/default/objects/Property__c/fields/deedlastsaleprice__c.field-meta.xml
<CustomField>
    <fullName>deedlastsaleprice__c</fullName>
    <label>Deed Last Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>