force-app/main/default/objects/Property__c/fields/exterior1code__c.field-meta.xml
<CustomField>
    <fullName>exterior1code__c</fullName>
    <label>Exterior Wall Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>