force-app/main/default/objects/Property__c/fields/fireplacecount__c.field-meta.xml
<CustomField>
    <fullName>fireplacecount__c</fullName>
    <label>Count: Fireplace</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>