force-app/main/default/objects/Property__c/fields/foundation__c.field-meta.xml
<CustomField>
    <fullName>foundation__c</fullName>
    <label>Foundation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>