force-app/main/default/objects/Property__c/fields/has_loan__c.field-meta.xml
<CustomField>
    <fullName>has_loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Loan</label>
    <type>Checkbox</type>
</CustomField>