force-app/main/default/objects/Property__c/fields/hvaccoolingdetail__c.field-meta.xml
<CustomField>
    <fullName>hvaccoolingdetail__c</fullName>
    <label>HVAC Cooling Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>