force-app/main/default/objects/Property__c/fields/hvacheatingdetail__c.field-meta.xml
<CustomField>
    <fullName>hvacheatingdetail__c</fullName>
    <label>HVAC Heating Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>