force-app/main/default/objects/Property__c/fields/hvacheatingfuel__c.field-meta.xml
<CustomField>
    <fullName>hvacheatingfuel__c</fullName>
    <label>HVAC Heating Fuel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>