force-app/main/default/objects/Property__c/fields/isFound__c.field-meta.xml
<CustomField>
    <fullName>isFound__c</fullName>
    <formula>IF(OR(NOT(ISBLANK(propertyaddressfull__c)),NOT(ISBLANK(construction__c)),NOT(ISBLANK(situscounty__c))),TRUE,FALSE)</formula>
    <label>Is Found</label>
    <type>Checkbox</type>
</CustomField>