force-app/main/default/objects/Property__c/fields/Known_Subunits__c.field-meta.xml
<CustomField>
    <fullName>Known_Subunits__c</fullName>
    <label>Known Subunits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>