force-app/main/default/objects/Property__c/fields/lastownershiptransferdate__c.field-meta.xml
<CustomField>
    <fullName>lastownershiptransferdate__c</fullName>
    <label>Last Ownership Transfer Date</label>
    <type>DateTime</type>
</CustomField>