force-app/main/default/objects/Property__c/fields/legalsubdivision__c.field-meta.xml
<CustomField>
    <fullName>legalsubdivision__c</fullName>
    <label>Subdivision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>