force-app/main/default/objects/Property__c/fields/ltv__c.field-meta.xml
<CustomField>
    <fullName>ltv__c</fullName>
    <label>Loan-to-Value Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>