force-app/main/default/objects/Property__c/fields/Mailing_Only_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Only_Address__c</fullName>
    <description>probably temp</description>
    <label>Mailing Only Address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>