force-app/main/default/objects/Property__c/fields/Owner_on_Record__c.field-meta.xml
<CustomField>
    <fullName>Owner_on_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner on Record</label>
    <type>Checkbox</type>
</CustomField>