force-app/main/default/objects/Property__c/fields/ownershipvestingrelationcode__c.field-meta.xml
<CustomField>
    <fullName>ownershipvestingrelationcode__c</fullName>
    <label>Ownership Vesting Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>