force-app/main/default/objects/Property__c/fields/ownertypedescription1__c.field-meta.xml
<CustomField>
    <fullName>ownertypedescription1__c</fullName>
    <label>Ownership Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>