force-app/main/default/objects/Property__c/fields/ownertypedescription2__c.field-meta.xml
<CustomField>
    <fullName>ownertypedescription2__c</fullName>
    <label>Second Owner Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>