force-app/main/default/objects/Property__c/fields/parcelnumberformatted__c.field-meta.xml
<CustomField>
    <fullName>parcelnumberformatted__c</fullName>
    <label>Parcel Number Formatted</label>
    <length>63</length>
    <type>Text</type>
</CustomField>