force-app/main/default/objects/Property__c/fields/parcelnumberraw__c.field-meta.xml
<CustomField>
    <fullName>parcelnumberraw__c</fullName>
    <label>Parcel Number Raw</label>
    <length>50</length>
    <type>Text</type>
</CustomField>