force-app/main/default/objects/Property__c/fields/parkinggarage__c.field-meta.xml
<CustomField>
    <fullName>parkinggarage__c</fullName>
    <label>Parking Garage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>