force-app/main/default/objects/Property__c/fields/partyowner1namefull__c.field-meta.xml
<CustomField>
    <fullName>partyowner1namefull__c</fullName>
    <label>Owner 1 Name Full</label>
    <length>255</length>
    <type>Text</type>
</CustomField>