force-app/main/default/objects/Property__c/fields/partyowner2namefull__c.field-meta.xml
<CustomField>
    <fullName>partyowner2namefull__c</fullName>
    <label>Owner 2 Name Full</label>
    <length>255</length>
    <type>Text</type>
</CustomField>