force-app/main/default/objects/Property__c/fields/Pirateship_Checked__c.field-meta.xml
<CustomField>
    <fullName>Pirateship_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pirateship Checked</label>
    <type>Checkbox</type>
</CustomField>