force-app/main/default/objects/Property__c/fields/previousassessedvalue__c.field-meta.xml
<CustomField>
    <fullName>previousassessedvalue__c</fullName>
    <label>Previous Assessed Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>