force-app/main/default/objects/Property__c/fields/propertyaddresscity__c.field-meta.xml
<CustomField>
    <fullName>propertyaddresscity__c</fullName>
    <label>Property: Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>