force-app/main/default/objects/Property__c/fields/propertyaddressfull__c.field-meta.xml
<CustomField>
    <fullName>propertyaddressfull__c</fullName>
    <inlineHelpText>THE SFMAPSAPI (ATTOM) STREET ADDRESS</inlineHelpText>
    <label>Property: Address Full</label>
    <length>255</length>
    <type>Text</type>
</CustomField>