force-app/main/default/objects/Property__c/fields/propertyaddresszip__c.field-meta.xml
<CustomField>
    <fullName>propertyaddresszip__c</fullName>
    <label>Property: Address Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>