force-app/main/default/objects/Property__c/fields/propertyjurisdictionname__c.field-meta.xml
<CustomField>
    <fullName>propertyjurisdictionname__c</fullName>
    <label>Jurisdiction Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>