force-app/main/default/objects/Property__c/fields/propertylatitude__c.field-meta.xml
<CustomField>
    <fullName>propertylatitude__c</fullName>
    <label>Property: Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>