force-app/main/default/objects/Property__c/fields/propertylongitude__c.field-meta.xml
<CustomField>
    <fullName>propertylongitude__c</fullName>
    <label>Property: Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>