force-app/main/default/objects/Property__c/fields/propertyusegroup__c.field-meta.xml
<CustomField>
    <fullName>propertyusegroup__c</fullName>
    <label>Property Use Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>