force-app/main/default/objects/Property__c/fields/propertyusestandardized__c.field-meta.xml
<CustomField>
    <fullName>propertyusestandardized__c</fullName>
    <inlineHelpText>(untranslated codes)

409 : Tax Exempt Public Housing...
463 : Agricultural,Improved,Rural...
464 : Salon / Barber / Hair Dresser...
471 : Multi-Family Residential / Apartment Building (only in Pottawattamie County, IA?)</inlineHelpText>
    <label>Property Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>