force-app/main/default/objects/Property__c/fields/roofmaterial__c.field-meta.xml
<CustomField>
    <fullName>roofmaterial__c</fullName>
    <label>Roof Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>