force-app/main/default/objects/Property__c/fields/roomscount__c.field-meta.xml
<CustomField>
    <fullName>roomscount__c</fullName>
    <label>Rooms Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>