force-app/main/default/objects/Property__c/fields/situscounty__c.field-meta.xml
<CustomField>
    <fullName>situscounty__c</fullName>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>