force-app/main/default/objects/Property__c/fields/statusowneroccupiedflag__c.field-meta.xml
<CustomField>
    <fullName>statusowneroccupiedflag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner Occupied Flag</label>
    <type>Checkbox</type>
</CustomField>