force-app/main/default/objects/Property__c/fields/storiescount__c.field-meta.xml
<CustomField>
    <fullName>storiescount__c</fullName>
    <label>Stories Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>