force-app/main/default/objects/Property__c/fields/structurestyle__c.field-meta.xml
<CustomField>
    <fullName>structurestyle__c</fullName>
    <label>Structure Style Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>