force-app/main/default/objects/Property__c/fields/taxassessedvalueimprovements__c.field-meta.xml
<CustomField>
    <fullName>taxassessedvalueimprovements__c</fullName>
    <label>Tax Assessed Value Improvements</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>