force-app/main/default/objects/Property__c/fields/taxassessedvalueland__c.field-meta.xml
<CustomField>
    <fullName>taxassessedvalueland__c</fullName>
    <label>Tax: Assessed Value Land</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>