force-app/main/default/objects/Property__c/fields/taxassessedvaluetotal__c.field-meta.xml
<CustomField>
    <fullName>taxassessedvaluetotal__c</fullName>
    <label>Tax Assessed Value Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>