force-app/main/default/objects/Property__c/fields/taxbilledamount__c.field-meta.xml
<CustomField>
    <fullName>taxbilledamount__c</fullName>
    <label>Tax Billed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>