force-app/main/default/objects/Property__c/fields/taxfiscalyear__c.field-meta.xml
<CustomField>
    <fullName>taxfiscalyear__c</fullName>
    <label>Tax: Fiscal Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>