force-app/main/default/objects/Property__c/fields/taxmarketvalueimprovements__c.field-meta.xml
<CustomField>
    <fullName>taxmarketvalueimprovements__c</fullName>
    <label>Tax Market Value Improvements</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>