force-app/main/default/objects/Property__c/fields/taxmarketvalueland__c.field-meta.xml
<CustomField>
    <fullName>taxmarketvalueland__c</fullName>
    <label>Tax: Market Value Land</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>