force-app/main/default/objects/Property__c/fields/taxmarketvaluetotal__c.field-meta.xml
<CustomField>
    <fullName>taxmarketvaluetotal__c</fullName>
    <label>Tax Market Value Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>