force-app/main/default/objects/Property__c/fields/taxyearassessed__c.field-meta.xml
<CustomField>
    <fullName>taxyearassessed__c</fullName>
    <label>Tax: Year Assessed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>