force-app/main/default/objects/Property__c/fields/unitscount__c.field-meta.xml
<CustomField>
    <fullName>unitscount__c</fullName>
    <label>Units Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>