force-app/main/default/objects/Property__c/fields/yearbuilt__c.field-meta.xml
<CustomField>
    <fullName>yearbuilt__c</fullName>
    <label>Year Built</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>