force-app/main/default/objects/Property__c/fields/yearbuilteffective__c.field-meta.xml
<CustomField>
    <fullName>yearbuilteffective__c</fullName>
    <label>Year Built Effective</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>