force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address__Street__s</columns>
    <columns>Address__City__s</columns>
    <columns>Address__StateCode__s</columns>
    <columns>Address__PostalCode__s</columns>
    <columns>Mailing_Only_Address__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>propertyaddressfull__c</columns>
    <columns>yearbuilt__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Address__City__s</field>
        <operation>contains</operation>
    </filters>
    <label>All</label>
</ListView>